k8s/20-backend.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: skillpulse
  labels:
    app: backend

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - name: http
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: skillpulse

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      automountServiceAccountToken: false

      containers:
        - name: backend

          image: srini2390/skillpulse-backend:latest

          imagePullPolicy: Always

          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: 25m
              memory: 64Mi

            limits:
              memory: 128Mi
