k8s/30-frontend.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: skillpulse
  labels:
    app: frontend

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - name: http
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: skillpulse

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: srini2390/frontend:v1

          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 80

          resources:
            requests:
              cpu: 50m
              memory: 32Mi

            limits:
              memory: 64Mi

          livenessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 5
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 2
            periodSeconds: 5
