k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: skillpulse-ingress
  namespace: skillpulse

spec:
  ingressClassName: nginx

  rules:
    - host: skillpulse.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend
                port:
                  number: 80
